# dnks-playground

./: .gitignore  README.md  requirements.txt
dab/demo/: README.md  bundle_config_schema.json  databricks.yaml  pyproject.toml
dab/demo/notebooks/: job.py
dab/demo/resources/: workflow.yaml
dab/demo/src/dnks_dab_demo/: spark.py
dab/demo/tests/unit_tests/: test_spark.py
dbsql-migration-tool/: README.md  config.example.yaml  pyproject.toml
dbsql-migration-tool/src/dbsql_migration_tool/: cli.py
dbsql-migration-tool/src/dbsql_migration_tool/common/: config.py  io.py  logging.py  utils.py  variables.py
dbsql-migration-tool/src/dbsql_migration_tool/experiment/: cli.py  udf.py
dbsql-migration-tool/src/dbsql_migration_tool/result/: cli.py  utils.py
dbsql-migration-tool/src/dbsql_migration_tool/transpile/: cli.py  udf.py
examples/custom-incremental-delta-backup-worm/: README.md  custom_incremental_delta_backup_worm.py
examples/custom-pyspark-datasources/api-reader/: partitioned_batch_reader.py  simple_batch_reader.py
examples/custom-pyspark-datasources/sharepoint/: sharepoint.py
examples/dbx-serverless-import/my_library/: pyproject.toml
examples/dbx-serverless-import/my_library/src/my_library/: hello_world.py
examples/spark-connect-unit-tests-docker-demo/: Dockerfile  README.md  docker-compose.yml  requirements.txt
examples/spark-connect-unit-tests-docker-demo/tests/: conftest.py  test_delta.py  test_jdbc.py  test_streaming.py
examples/uc-abac-rls-at-scale/: abac-mapping-sample.sql
examples/udf-sandbox-network-test/: udf-sandbox-test.sql
