[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "dnks-dab-demo"
version = "0.0.1"
description = ""
authors = ["Dominik Schuessele <dominik.schuessele@inovex.de>"]
readme = "README.md"


[tool.poetry.dependencies]
# project dependencies
python = "^3.10"
pyspark = "^3.5.3"


[tool.poetry.group.poetry]
optional = true

[tool.poetry.group.poetry.dependencies]
# ensure to keep poetry when using '--sync' option
poetry = "^1.8.5"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

